# kuka_interface_ws

./: .gitignore  INSTALL_GUIDE.md  README.md
docs/: INSTALL_GUIDE.md
src/process_msg_ki/: CMakeLists.txt  ProcessMsgKIConfig.h.in  package.xml
src/process_msg_ki/include/: ProcessMsgKIConfig.h  parser.hpp
src/process_msg_ki/launch/: input_device.launch
src/process_msg_ki/src/: dummy_controller.cpp  generate_robot_msg_shm_first_test.cpp  kuka_server_real_time.cpp  kuka_server_win.cpp  parser.cpp  process_robot_msg_shm_first.cpp  subscribe_ctrl_signal_shm_second.cpp
src/process_msg_ki/test/test_data/: sample_kuka.xml
